# fred_rss_tui

./: Cargo.toml  README.md  config.json
src/: app.rs  main.rs  network.rs
